# Mechsys

./: .hgignore  CMakeLists.txt  README.txt  Reset_cmake.sh  authors.txt  change_header.sh  create_mechsys_deb.sh  gen_deb_repository.sh  install.txt  macos_blender_links.sh  remove_results.sh  setup.py  ubuntu_blender_links.sh  ubuntu_deps.sh  ubuntu_install.txt
Modules/: FindBLITZ.cmake  FindCGAL.cmake  FindDEPS.cmake  FindDEPSFL.cmake  FindFLTK.cmake  FindGOTOBLAS.cmake  FindGSL.cmake  FindHDF5.cmake  FindHDF5PART.cmake  FindIGRAPH.cmake  FindLAPACK.cmake  FindLocLAPACK.cmake  FindMECHSYS.cmake  FindMPICXX.cmake  FindMTL.cmake  FindMUMPS.cmake  FindOPTDEPS.cmake  FindPARMETIS.cmake  FindPROC.cmake  FindSCALAPACK.cmake  FindSOPLEX.cmake  FindSPHASH.cmake  FindSUPERLU.cmake  FindSUPERLUD.cmake  FindSUPERLUMT.cmake  FindSZIP.cmake  FindTENSORS.cmake  FindTETGEN.cmake  FindTRIANGLE.cmake  FindUMFPACK.cmake  FindUseBLITZ.cmake  FindVORO.cmake  FindVTK.cmake
debian/: changelog  control  rules  watch
lib/: CMakeLists.txt  datfiles.h  doxymain.h  draw.h  geomtype.h  inpfile.h  matfile.h  mechsys.h  vtkcelltype.h
scripts/: 01_create_igraph_deb.sh  02_create_mechsys_deb.sh  03_gen_repository.sh  Clear_output.sh  Pov2Avi.sh  Reset_cmake.sh  do_compile_deps.sh  install_apt_deps.bash  install_compile_deps.bash  install_compile_deps_dem.bash  install_flashlite.bash  remove_results.sh  ubuntu_blender_links.sh  ubuntu_deps.sh  ubuntu_python_links.sh
src/: CMakeLists.txt  dem_genpack.cpp  dem_viewpack.cpp  mechsys.cpp  msysfem.cpp  msysmesh.cpp  run_genpack_paper.py  setup_mechsys.py
tadlbm/: CMakeLists.txt  tadlbm01.cpp  tadlbm02.cpp  tadlbm03.cpp
tdem/: CMakeLists.txt  Makefile  Rawbucket_faces.mesh  Rawbucket_verts.mesh  animation.sh  brazil.inp  brazil_test.cpp  bucket.py  compile_and_run.sh  cylinder_test.cpp  figure.cpp  generate_hdf5.cpp  mysoil.gsd  nonconvex.cpp  nonconvex.mesh  plot_res.py  roseMod.m  tbeam.inp  test.res  test2d_01.cpp  test3d_01.cpp  test3d_02.cpp  test3d_03.cpp  test3d_04.cpp  test_01.cpp  test_02.cpp  test_03.cpp  test_04.cpp  test_05.cpp  test_06.cpp  test_27cubes.cpp  test_beam.cpp  test_comm01.cpp  test_comm02.cpp  test_distances.cpp  test_domain.cpp  test_dynamics.cpp  test_mesh.cpp  test_periodic.cpp  test_read.cpp  (+19 more)
tdem/biaxialtest/: CMakeLists.txt  biaxialtest.cpp  biaxialtest.cpp~  parameters.txt
tdem/newtests/: CMakeLists.txt  dem_test1.cpp  dem_test2.cpp  dem_test3.cpp  new_join_res.cpp  paragrid3d.h  test_paragrid.cpp  view_res.cpp
tdem/roughsurface/: CMakeLists.txt  roughsurface.cpp  roughsurface.cpp~
tdem2D/: CMakeLists.txt  gas.cpp  gen_dem_png.py
tdem3D/: CMakeLists.txt  prueba.cpp
tdoc/: CMakeLists.txt  doc_fem1.cpp  doc_fem2.cpp  doc_msh1.cpp  doc_msh2.cpp  doc_msh3.cpp  doc_vtk1.cpp
temlbm/: CMakeLists.txt  temlbm01.cpp  temlbm02.cpp  temlbm03.cpp
temlbm2/: CMakeLists.txt  temlbm201.cpp  temlbm202.cpp  temlbm203.cpp  temlbm205.cpp
test/: CMakeLists.txt  alphashape01.cpp  check_mesh01.sh  delaunay.cpp  delaunay3D.cpp  linalg01.cpp  linalg02.cpp  linalg03.cpp  linalg04.cpp  linelastic.py  linsolver.cpp  main.inp  materials.mat  mesh01.cpp  mesh03.cpp  mesh04.cpp  monte_carlo.cpp  plot_models.py  plot_ode.py  plot_res.py  plot_timesteps.py  sandbox.cpp  serialize.cpp  tdelaunay3d.cpp  tembank02.py  test_array.cpp  test_colors.cpp  test_dunitvec.cpp  test_jacobirot.py  test_maps.cpp  test_min1.cpp  test_models.cpp  test_numdiff1.cpp  test_numdiff2.cpp  test_ode1.cpp  test_ode1.py  test_paragrid.cpp  test_readfiles.cpp  test_root.cpp  test_timesteps.cpp  (+4 more)
test/graph/: CMakeLists.txt  cluster01.cpp
test/models/: CMakeLists.txt  alt_sim_nod_60.inp  driver.cpp  driver.inp  drv_test2.inp  eigenbases.cpp  fcrit.cpp  invariants01.cpp  invariants02.cpp  invariants03.cpp  invariants04.cpp  invariants05.cpp  materials.inp  materials.mat  plot_driver.py  plot_models.py  plot_wrcs.py  smp.cpp  test1.inp  test_wrcs.cpp  ysurf.cpp
test/models/python/: camclay.py
test/vtk/: CMakeLists.txt  arrows.cpp  isosurf01.cpp  isosurf02.cpp  objects.cpp  sgridarrows.cpp  triangulation01.cpp  triangulation02.cpp  vtk_temperature.cpp
tfem/: CMakeLists.txt  arch.cpp  arch.h  beam.cpp  beam01.cpp  beam02.cpp  drawcirc.py  labtest.cpp  oneelem.cpp  plot_labtest.py  plot_res.py  shapefun.cpp
tfem/bhatti/: CMakeLists.txt  adv_ex_03_01.cpp  ex_01_04.cpp  ex_01_05.cpp  ex_01_06.cpp  ex_01_06.py  ex_01_17.cpp  ex_04_02.cpp  ex_04_06.cpp  ex_04_08.cpp  ex_04_11.cpp  ex_05_03.cpp  ex_06_22.cpp  ex_07_07.cpp  ex_07_09.cpp  ex_08_01.cpp
tfem/smith_griffiths/: CMakeLists.txt  fig_05_02.cpp  fig_05_11.cpp  fig_05_15.cpp  fig_05_15.msh  fig_05_17.cpp  fig_05_17.mesh  fig_05_24.cpp  fig_06_09.cpp  fig_06_35.cpp  fig_06_38.cpp  fig_09_08.cpp  fig_11_01.cpp  fig_11_01_new.cpp  fig_11_04.cpp  fig_11_04_new.cpp  fig_11_19.cpp  fig_11_19.inp  materials.mat  plot_fig_06_09.py  plot_res.py  sg-11.19.msh  sg_11_07_p113.res  sg_11_07_p114.sim  sg_11_19.res  sm_11_07_p113.res
tflbm/: CMakeLists.txt  tflbm01.cpp  tflbm02.cpp  tflbm03.cpp  tflbm04.cpp  tflbm05.cpp
tlbm/: CMakeLists.txt  ball.cpp  basic.cpp  bubble.cpp  cap_grain.cpp  capi.cpp  circles.out  colloid.cpp  cylinder.cpp  dam.cpp  drop.cpp  fracflow.cpp  gravity.cpp  magnus.cpp  multicomp.cpp  new_bubble.cpp  new_capi.cpp  new_cylinder.cpp  new_drop.cpp  percolating.txt  (+23 more)
tst/: CMakeLists.txt  alphashape01.cpp  check_all.sh  confinedflow.cpp  invariants.cpp  linalg01.cpp  linalg02.cpp  linsolver.cpp  mesh01.cpp  mesh01.py  mesh02.cpp  midas01.blend  midas06.blend  monte_carlo.cpp  mymodel.py  quadrature.cpp  serialize.cpp  talphashape01.cpp  tbeam01.cpp  tbeam02.cpp  tbiot01.cpp  tcamclay01.cpp  tcylin01.cpp  tembank01.cpp  tembank02.cpp  tembank02.py  tembed01.cpp  tembed01.py  tembed02.cpp  test_models.cpp  texcav01.cpp  texcav02.cpp  theat.cpp  theat01.cpp  tlaplace01.cpp  tlinalg01.cpp  tmesh01.cpp  tmesh01.py  tmesh02.cpp  tmesh03.cpp  (+38 more)
tst/midasgts/: CMakeLists.txt  texam1.cpp  texam5.cpp  tstatic121.cpp  tstatic122.cpp
tst/reddy/: CMakeLists.txt  tex461.cpp  tex541.cpp  tex831.cpp  tex851.cpp
(+473 files in other folders)
